src/sample/Errors/C0004_(not_implemented).st
// C0004: '{y}' is no component of '{type of x}'
// SAMPLE 1: THIS^.A; (where A is not defined)
// SAMPLE 2: _xx := SBYTE#-1;
// This error will not be implemented because it is just a syntax error.